fix tiny grey bit after shifting subitem green dots to center relative to text height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -733,7 +733,7 @@ section .container {
 
 .resume .resume-subitem {
   padding: 0 0 15px 10px;
-  margin-top: -2px;
+  margin-top: 0px;
   border-left: 2px solid rgba(255, 255, 255, 0.2);
   position: relative;
 }
